--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="Clinic"
+        android:label="OClick-nic"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
@@ -69,7 +69,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".BloodTestResultActivity"
+            android:name=".BloodTestResultPatient"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
